@@ -55,7 +55,19 @@ class JIDParsingTest(unittest.TestCase):
             assert 0
         except jid.InvalidFormat:
             assert 1
+
+    def testPrep(self):
+        # case map of user
+        self.assertEquals(jid.prep("UsEr", "host", "resource"),
+                          ("user", "host", "resource"))
             
+        # case map of host
+        self.assertEquals(jid.prep("user", "hoST", "resource"),
+                          ("user", "host", "resource"))
+
+        # no case map of resource
+        self.assertNotEquals(jid.prep("user", "host", "Resource"),
+                             ("user", "host", "resource"))
 
 class JIDClassTest(unittest.TestCase):
     def testBasic(self):
